<resources>
    <string name="app_name">Andreea Cooking</string>
    <string name="hint_search_by_ingredient">Search recipe by ingredient</string>
    <string name="recipe_categories">Categories</string>
    <string name="recipe_breakfast">Breakfast</string>
    <string name="recipe_brunch">Brunch</string>
    <string name="recipe_lunch">Lunch</string>
    <string name="recipe_dinner">Dinner</string>
    <string name="recipe_desserts">Desserts</string>
    <string name="recipe_other">Other</string>
    <string name="recipe_all_recipes">All Recipes</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="edit_recipe">Edit Recipe</string>
    <string name="delete_recipe">Delete Recipe</string>
    <string name="clock_image">Clock image</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="previous_button">Previous Page Button</string>
    <string name="recipe_name">Recipe name</string>
    <string name="cooking_time">Cooking time</string>
    <string name="recipe_ingredients">Ingredients</string>
    <string name="cooking_steps">Cooking Steps</string>
    <string name="ingredients_placeholder">
        1. Ingredient  \n
        2. Ingredient  \n
        3. Ingredient  \n
    </string>
    <string name="steps_placeholder">
        1. Step  \n
        2. Step  \n
        3. Step  \n
    </string>
    <string name="navigation_arrow">Navigation Arrow</string>
    <string name="add_recipe_image">Press to add Recipe Image</string>
    <string name="add_recipe_name">Add Recipe name</string>
    <string name="add_cooking_time">Add Cooking time</string>
    <string name="save_recipe">Save Recipe</string>
    <string name="cancel_recipe">Cancel Recipe</string>
    <string name="add_ingredients">Add Ingredients</string>
    <string name="add_cooking_steps">Add Cooking Steps</string>
    <string-array name="recipe_categories">
        <item>Breakfast</item>
        <item>Brunch</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Desserts</item>
        <item>Other</item>
    </string-array>
    <string name="choose_category">Choose category…</string>
</resources>