<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/AppTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:queryHint="@string/hint_search_by_ingredient"
        app:iconifiedByDefault="false"
        app:layout_constraintTop_toBottomOf="@id/AppTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="25dp"/>

    <TextView
        android:id="@+id/RecipesCategories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipe_categories"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/AppTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"/>

    <GridLayout
        android:id="@+id/gridRecipesCategories"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:rowCount="4"
        android:columnCount="2"
        android:useDefaultMargins="true"
        app:layout_constraintTop_toBottomOf="@id/RecipesCategories"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/breakfastButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/recipe_breakfast"
            android:textColor="@color/orange"
            app:backgroundTint="@color/gray"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/brunchButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/recipe_brunch"
            android:textColor="@color/orange"
            app:backgroundTint="@color/gray"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/lunchButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/recipe_lunch"
            android:textColor="@color/orange"
            app:backgroundTint="@color/gray"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dinnerButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/recipe_dinner"
            android:textColor="@color/orange"
            app:backgroundTint="@color/gray"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dessertsButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/recipe_desserts"
            android:textColor="@color/orange"
            app:backgroundTint="@color/gray"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/otherButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/recipe_other"
            android:textColor="@color/orange"
            app:backgroundTint="@color/gray"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/allRecipesButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="2"
            android:text="@string/recipe_all_recipes"
            android:textColor="@color/orange"
            app:backgroundTint="@color/gray"/>
    </GridLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addRecipeButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_recipe"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:icon="@drawable/ic_add_recipe"
        app:iconGravity="top"
        app:iconSize="16dp"
        app:iconTint="@color/black"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>