<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recipePage"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/recipeImageHeader"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_empty_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintDimensionRatio="16:9" />

    <ImageButton
        android:id="@+id/previousPageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintTop_toTopOf="@id/recipeImageHeader"
        app:layout_constraintStart_toStartOf="@id/recipeImageHeader" />

    <TextView
        android:id="@+id/recipeName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/recipe_name"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/recipeImageHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <LinearLayout
        android:id="@+id/cookingTimeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/recipeName"
        app:layout_constraintStart_toStartOf="@id/recipeName"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/cookingTimeIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_clock"/>

        <TextView
            android:id="@+id/cookingTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/cooking_time"
            android:textAppearance="?attr/textAppearanceBody2"/>
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/cookingTimeLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/contentContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">


            <TextView
                android:id="@+id/ingredientsHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ingredients"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:paddingTop="8dp"/>

            <TextView
                android:id="@+id/ingredientsDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingredients_placeholder"
                android:textAppearance="?attr/textAppearanceBody2"
                android:paddingTop="4dp"
                android:lineSpacingExtra="4dp"/>


            <TextView
                android:id="@+id/cookingStepsHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cooking Steps"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:paddingTop="16dp"/>

            <TextView
                android:id="@+id/stepsDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/steps_placeholder"
                android:textAppearance="?attr/textAppearanceBody2"
                android:paddingTop="4dp"
                android:lineSpacingExtra="4dp"/>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/editRecipeButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="16dp"
        android:text="Edit Recipe"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:icon="@drawable/ic_pen"
        app:iconGravity="top"
        app:iconSize="16dp"
        app:iconTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:onClick="onEditRecipeClicked"/>
    
    <com.google.android.material.button.MaterialButton
        android:id="@+id/deleteRecipeButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="16dp"
        android:text="Delete Recipe"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:icon="@drawable/ic_bin"
        app:iconGravity="top"
        app:iconSize="16dp"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:onClick="onDeleteRecipeClicked"/>


</androidx.constraintlayout.widget.ConstraintLayout>